objects/Mandate_Mail_Object_Field_Mappings__mdt.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_Inner_Order__c</fullName>
        <label>Grouping_Inner_Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <description>Unterteilung der Daten, die zu einem Objekt gehören z.B. Versicherungsinformationen im Opportunity Object</description>
        <label>Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Key__c</fullName>
        <label>Identifier_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsManyObject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When respective Opportunity object is a Child Object, e.g. relationship to account.</description>
        <label>IsManyObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOneObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOneObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Many_Object__c</fullName>
        <label>Many Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Object__c</fullName>
        <label>One Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_String__c</fullName>
        <label>Query_String</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Object__c</fullName>
        <label>Root_Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mandate Mail Object Field Mappings</label>
    <pluralLabel>Mandate Mail Object Field Mappings</pluralLabel>
</CustomObject>